--- a/index.html
+++ b/index.html
@@ -4,9 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>My team</title>
   </head>
 
-  <body></body>
+  <body>
+    <!-- site-header -->
+    <header class="site-header">
+      <div class="container">
+        <div class="site-header__inner">
+          <a class="logo" href="./index.html">
+            <img
+              class="logo__link"
+              src="./images/myteam-logo.svg"
+              alt="Site logotip"
+              width="160"
+              height="40"
+            />
+          </a>
+
+          <nav class="navbar">
+            <ul class="navbar__list">
+              <li class="navbar__item">
+                <a class="navbar__link" href="./index.html">home</a>
+              </li>
+              <li class="navbar__item">
+                <a class="navbar__link" href="#">about</a>
+              </li>
+            </ul>
+          </nav>
+          <button class="btn">&#9776;</button>
+
+          <a class="header__link" href="#">contact us</a>
+        </div>
+      </div>
+    </header>
+    <!-- /site-header -->
+
+    <!-- site-main -->
+
+    <main class="site-main">
+      <!-- hero-section -->
+      <section class="hero">
+        <div class="container">
+          <div class="hero__inner">
+            <div class="title-wrapper">
+              <h1 class="hero__title">
+                Find the best <span class="title-red">talent</span>
+              </h1>
+            </div>
+            <div class="text-wrapper">
+              <span class="line"></span>
+              <p class="hero__text">
+                Finding the right people and building high performing teams can
+                be hard. Most companies aren’t tapping into the abundance of
+                global talent. We’re about to change that.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /hero-section -->
+    </main>
+
+    <!-- /site-main -->
+  </body>
 </html>
