Add all images, scss files and new sections

--- a/index.html
+++ b/index.html
@@ -1,72 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <title>My team</title>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/main.css" />
+		<title>My team</title>
+	</head>
 
-  <body>
-    <!-- site-header -->
-    <header class="site-header">
-      <div class="container">
-        <div class="site-header__inner">
-          <a class="logo" href="./index.html">
-            <img
-              class="logo__link"
-              src="./images/myteam-logo.svg"
-              alt="Site logotip"
-              width="160"
-              height="40"
-            />
-          </a>
+	<body>
+		<!-- site-header -->
+		<header class="site-header">
+			<div class="container">
+				<div class="site-header__inner">
+					<a class="logo" href="./index.html">
+						<img
+							class="logo__link"
+							src="./images/myteam-logo.svg"
+							alt="Site logotip"
+							width="160"
+							height="40"
+						/>
+					</a>
 
-          <nav class="navbar">
-            <ul class="navbar__list">
-              <li class="navbar__item">
-                <a class="navbar__link" href="./index.html">home</a>
-              </li>
-              <li class="navbar__item">
-                <a class="navbar__link" href="#">about</a>
-              </li>
-            </ul>
-          </nav>
-          <button class="btn">&#9776;</button>
+					<nav class="navbar">
+						<ul class="navbar__list">
+							<li class="navbar__item">
+								<a class="navbar__link" href="./index.html">home</a>
+							</li>
+							<li class="navbar__item">
+								<a class="navbar__link" href="#">about</a>
+							</li>
+						</ul>
+					</nav>
+					<button class="btn">&#9776;</button>
 
-          <a class="header__link" href="#">contact us</a>
-        </div>
-      </div>
-    </header>
-    <!-- /site-header -->
+					<a class="header__link" href="#">contact us</a>
+				</div>
+			</div>
+		</header>
+		<!-- /site-header -->
 
-    <!-- site-main -->
+		<!-- site-main -->
 
-    <main class="site-main">
-      <!-- hero-section -->
-      <section class="hero">
-        <div class="container">
-          <div class="hero__inner">
-            <div class="title-wrapper">
-              <h1 class="hero__title">
-                Find the best <span class="title-red">talent</span>
-              </h1>
-            </div>
-            <div class="text-wrapper">
-              <span class="line"></span>
-              <p class="hero__text">
-                Finding the right people and building high performing teams can
-                be hard. Most companies aren’t tapping into the abundance of
-                global talent. We’re about to change that.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- /hero-section -->
-    </main>
+		<main class="site-main">
+			<!-- hero-section -->
+			<section class="hero">
+				<div class="container">
+					<div class="hero__inner">
+						<div class="title-wrapper">
+							<h1 class="hero__title">
+								Find the best <span class="title-red">talent</span>
+							</h1>
+						</div>
+						<div class="text-wrapper">
+							<span class="line"></span>
+							<p class="hero__text">
+								Finding the right people and building high performing teams can
+								be hard. Most companies aren’t tapping into the abundance of
+								global talent. We’re about to change that.
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- /hero-section -->
+			<!-- build-section -->
+			<section class="build">
+				<div class="container">
+					<div class="build__inner">
+						<div class="build__content">
+							<span class="build__line"></span>
+							<h2 class="build__title">
+								Build & manage distributed teams like no one else.
+							</h2>
+						</div>
+						<div class="build__conwrapper">
+							<ul class="build__list">
+								<li class="build__item">
+									<h3 class="build__item-title">Experienced Individuals</h3>
+									<p class="build__item-text">
+										Our network is made up of highly experienced professionals
+										who are passionate about what they do.
+									</p>
+								</li>
+								<li class="build__item">
+									<h3 class="build__item-title">Easy to Implement</h3>
+									<p class="build__item-text">
+										Our processes have been refined over years of implementation
+										meaning our teams always deliver.
+									</p>
+								</li>
+								<li class="build__item">
+									<h3 class="build__item-title">Enhanced Productivity</h3>
+									<p class="build__item-text">
+										Our customized platform with in-built analytics helps you
+										manage your distributed teams.
+									</p>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- /build-section -->
+			<!-- stories-section -->
+			<section class="stories">
+				<div class="container">
+					<div class="stories__inner">
+						<div class="title-wrapper">
+							<h2 class="stories__title">
+								Delivering real results for top companies. Some of our
+								<span class="title-color">success stories.</span>
+							</h2>
+						</div>
 
-    <!-- /site-main -->
-  </body>
+						<ul class="stories__list">
+							<li class="stories__item">
+								<p class="stories__item-text">
+									“The team perfectly fit the specialized skill set required.
+									They focused on the most essential features helping us launch
+									the platform eight months faster than planned.”
+								</p>
+								<strong class="stories__item-str">Kady Baker</strong>
+								<em class="stories__item-italic"
+									>Product Manager at Bookmark</em
+								>
+							</li>
+							<li class="stories__item">
+								<p class="stories__item-text">
+									“We needed to automate our entire onboarding process. The team
+									came in and built out the whole journey. Since going live,
+									user retention has gone through the roof!”
+								</p>
+								<strong class="stories__item-str">Aiysha Reese</strong>
+								<em class="stories__item-italic">Founder of Manage</em>
+							</li>
+							<li class="stories__item">
+								<p class="stories__item-text">
+									“Amazing. Our team helped us build an app that delivered a new
+									experience for hiring a physio. The launch was an instant
+									success with 100k downloads in the first month.”
+								</p>
+								<strong class="stories__item-str">Arthur Clarke</strong>
+								<em class="stories__item-italic">Co-founder of MyPhysio</em>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<!-- /stories-section -->
+		</main>
+
+		<!-- /site-main -->
+	</body>
 </html>
