--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<section class="hero">
 				<div class="container">
 					<div class="hero__inner">
-						<div class="title-wrapper">
+						<div class="hero__title-wrapper">
 							<h1 class="hero__title">
 								Find the best <span class="title-red">talent</span>
 							</h1>
@@ -108,7 +108,7 @@
 			<section class="stories">
 				<div class="container">
 					<div class="stories__inner">
-						<div class="title-wrapper">
+						<div class="stories__title-wrapper">
 							<h2 class="stories__title">
 								Delivering real results for top companies. Some of our
 								<span class="title-color">success stories.</span>
