--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								<a class="navbar__link" href="./index.html">home</a>
 							</li>
 							<li class="navbar__item">
-								<a class="navbar__link" href="#">about</a>
+								<a class="navbar__link" href="./about.html">about</a>
 							</li>
 						</ul>
 					</nav>
@@ -183,7 +183,7 @@
 									<a class="footer__link" href="./index.html">home</a>
 								</li>
 								<li class="footer__item">
-									<a class="footer__link" href="#">about</a>
+									<a class="footer__link" href="./about.html">about</a>
 								</li>
 							</ul>
 						</div>
