Add all changes

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 						<h2 class="directors__title">Meet the directors</h2>
 						<ul class="directors__list">
 							<li class="directors__item">
-								<stron class="item-strong">Nikita Marks</stron>
+								<strong class="item-strong">Nikita Marks</strong>
 								<em class="item-em">Founder & CEO</em>
 								<span class="item-circle">
 									<img
@@ -82,7 +82,7 @@
 								</span>
 							</li>
 							<li class="directors__item">
-								<stron class="item-strong">Cristian Duncan</stron>
+								<strong class="item-strong">Cristian Duncan</strong>
 								<em class="item-em">Co-founder & COO</em>
 								<span class="item-circle">
 									<img
@@ -95,7 +95,7 @@
 								</span>
 							</li>
 							<li class="directors__item">
-								<stron class="item-strong">Cruz Hamer</stron>
+								<strong class="item-strong">Cruz Hamer</strong>
 								<em class="item-em">Co-founder & CTO</em>
 								<span class="item-circle">
 									<img
@@ -108,7 +108,7 @@
 								</span>
 							</li>
 							<li class="directors__item">
-								<stron class="item-strong">Drake Heaton</stron>
+								<strong class="item-strong">Drake Heaton</strong>
 								<em class="item-em">Business Development Lead</em>
 								<span class="item-circle">
 									<img
@@ -121,7 +121,7 @@
 								</span>
 							</li>
 							<li class="directors__item">
-								<stron class="item-strong">Griffin Wise</stron>
+								<strong class="item-strong">Griffin Wise</strong>
 								<em class="item-em">Lead Marketing</em>
 								<span class="item-circle">
 									<img
@@ -134,7 +134,7 @@
 								</span>
 							</li>
 							<li class="directors__item directors__item--active">
-								<stron class="item-strong acstr">Aden Allan</stron>
+								<strong class="item-strong acstr">Aden Allan</strong>
 								<p class="item-em acem">
 									“Empowered teams create truly amazing products. Set the north
 									star and let them follow it.”
